webkit prefix border radius to fix outline bug on ios

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -23,6 +23,7 @@
 .Search__search-input {
   background-color: var(--primary-light-1);
   border-radius: 8px;
+  -webkit-border-radius: 8px;
   font-size: 18px;
   color: var(--text);
   border: none;
